# rye-sample

./: .pre-commit-config.yaml  pyproject.toml
src/rye_sample/: __init__.py
